makes row red for missed flight

--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -9,11 +9,11 @@
     </thead>
     <tbody>
         <% flights.forEach(f => { %>
-            <tr>
+            <tr class=<%= f.departs.getTime() < new Date().getTime() ? 'missed' : '' %>>
                 <td><%= f.airline %></td>
                 <td><%= f.airport %></td>
                 <td><%= f.flightNo %></td>
-                <td class=<%= f.departs.getTime() < new Date().getTime() ? 'missed' : '' %>><%= f.departs %></td>
+                <td><%= f.departs %></td>
             </tr>
         <% }) %>
     </tbody>
